demos section spacing fixes, add all demos link on component

--- a/resources/assets/styles/layouts/archive/demos/_all-demos.scss
+++ b/resources/assets/styles/layouts/archive/demos/_all-demos.scss
@@ -1,11 +1,13 @@
 .template-demos {
   .demos-section {
-    @include spacer;
-
     @extend %layout-three-columns;
   }
 
   .card {
+    &.col {
+      margin-bottom: 25px;
+    }
+
     .desc {
       @extend %text-small;
     }
